# RandLib

./: .gitignore  CMakeLists.txt  CMakePresets.json  RandLib.h  RandLib.hpp  RandLib.pro  RandLib_global.h
.github/: pull_request_template.md
cmake/: RandLibConfig.cmake.in
distributions/: BasicRandGenerator.cpp  BasicRandGenerator.h  BasicRandGenerator.hpp  ContinuousDistributions.hpp  DiscreteDistributions.hpp  Distributions.cpp  Distributions.h  ProbabilityDistribution.cpp  ProbabilityDistribution.h  ProbabilityDistribution.hpp  UniformDiscreteRand.h  UniformDiscreteRand.hpp  UniformRand.h  UniformRand.hpp  UnivariateDistribution.h  UnivariateDistribution.hpp
distributions/bivariate/: BivariateDistribution.cpp  BivariateDistribution.h  BivariateNormalRand.cpp  BivariateNormalRand.h  BivariateNormalRand.hpp  ContinuousBivariateDistribution.cpp  ContinuousBivariateDistribution.h  DiscreteBivariateDistribution.cpp  DiscreteBivariateDistribution.h  NormalInverseGammaRand.cpp  NormalInverseGammaRand.h  NormalInverseGammaRand.hpp  TrinomialRand.cpp  TrinomialRand.h  TrinomialRand.hpp
distributions/univariate/: BasicRandGenerator.cpp  BasicRandGenerator.h  BasicRandGenerator.hpp  ExponentialFamily.cpp  ExponentialFamily.h  ExponentialFamily.hpp  UnivariateDistribution.cpp  UnivariateDistribution.h
distributions/univariate/continuous/: BetaPrimeRand.cpp  BetaPrimeRand.h  BetaPrimeRand.hpp  BetaRand.cpp  BetaRand.h  BetaRand.hpp  CauchyRand.cpp  CauchyRand.h  CauchyRand.hpp  ContinuousDistribution.cpp  ContinuousDistribution.h  DegenerateRand.cpp  DegenerateRand.h  DegenerateRand.hpp  ExponentialRand.cpp  ExponentialRand.h  ExponentialRand.hpp  ExponentiallyModifiedGaussianRand.cpp  ExponentiallyModifiedGaussianRand.h  ExponentiallyModifiedGaussianRand.hpp  FisherFRand.cpp  FisherFRand.h  FisherFRand.hpp  FrechetRand.cpp  FrechetRand.h  FrechetRand.hpp  GammaRand.cpp  GammaRand.h  GammaRand.hpp  GeometricStableRand.cpp  GeometricStableRand.h  GeometricStableRand.hpp  GumbelRand.cpp  GumbelRand.h  GumbelRand.hpp  InverseGammaRand.cpp  InverseGammaRand.h  InverseGammaRand.hpp  InverseGaussianRand.cpp  InverseGaussianRand.h  (+64 more)
distributions/univariate/continuous/circular/: CircularDistribution.cpp  CircularDistribution.h  VonMisesRand.cpp  VonMisesRand.h  VonMisesRand.hpp  WrappedExponentialRand.cpp  WrappedExponentialRand.h  WrappedExponentialRand.hpp
distributions/univariate/discrete/: BernoulliRand.cpp  BernoulliRand.h  BernoulliRand.hpp  BetaBinomialRand.cpp  BetaBinomialRand.h  BetaBinomialRand.hpp  BinomialRand.cpp  BinomialRand.h  BinomialRand.hpp  CategoricalRand.cpp  CategoricalRand.h  CategoricalRand.hpp  DiscreteDistribution.cpp  DiscreteDistribution.h  GeometricRand.cpp  GeometricRand.h  GeometricRand.hpp  HyperGeometricRand.cpp  HyperGeometricRand.h  HyperGeometricRand.hpp  LogarithmicRand.cpp  LogarithmicRand.h  LogarithmicRand.hpp  NegativeBinomialRand.cpp  NegativeBinomialRand.h  NegativeBinomialRand.hpp  NegativeHyperGeometricRand.cpp  NegativeHyperGeometricRand.h  NegativeHyperGeometricRand.hpp  PoissonRand.cpp  PoissonRand.h  PoissonRand.hpp  RademacherRand.cpp  RademacherRand.h  RademacherRand.hpp  SkellamRand.cpp  SkellamRand.h  SkellamRand.hpp  UniformDiscreteRand.cpp  UniformDiscreteRand.h  (+10 more)
distributions/univariate/singular/: CantorRand.cpp  CantorRand.h  CantorRand.hpp  SingularDistribution.cpp  SingularDistribution.h
math/: BetaMath.cpp  BetaMath.h  BetaMath.hpp  Constants.h  Constants.hpp  GammaMath.cpp  GammaMath.h  GammaMath.hpp  MarcumMath.cpp  MarcumMath.h  MarcumMath.hpp  NumericMath.cpp  NumericMath.h  NumericMath.hpp  RandMath.cpp  RandMath.h  RandMath.hpp
source/RandLib/: RandLib_global.h
source/RandLib/distributions/: BasicRandGenerator.hpp  ProbabilityDistribution.hpp  UniformDiscreteRand.hpp  UniformRand.hpp  UnivariateDistribution.hpp
testing/: UniformContinuousTesting.cpp  UniformDiscreteTesting.cpp  UniformTesting.cpp
